# stateful-guardrails

./: .gitignore  LICENSE  README.en.md  README.md  pyproject.toml
data/: c1.calib.jsonl  c1.test.jsonl  c3.calib.jsonl  c3.test.jsonl  calibration.json
data_holdout/: c1.test.jsonl  c3.calib.jsonl  c3.test.jsonl
docs/: DESIGN.md  PLAN.md
stateful_guardrails/: __init__.py
stateful_guardrails/adapters/: .ai.md  __init__.py  embeddings.py  llm.py  state_store.py
stateful_guardrails/core/: .ai.md  __init__.py  llm.py  policy.py  state.py  vectormath.py
stateful_guardrails/interfaces/: .ai.md  __init__.py  cli.py
stateful_guardrails/pipeline/: .ai.md  __init__.py  catalog.py  cost.py  detectors.py  engine.py  escalation.py  eval.py  policies.py  scanner.py
tests/: test_cost_model.py  test_dataset_stratified.py  test_escalation.py  test_layering.py  test_policies.py  test_split_isolation.py  test_state_persistence.py  test_stateful_delta.py
