[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stateful-guardrails"
version = "0.1.0"
description = "Stateful safety middleware for multi-agent LLM systems"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
]

[project.scripts]
sgr = "stateful_guardrails.interfaces.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["stateful_guardrails*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
